kubernetes/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapaderisco-unilab
  namespace: mapaderisco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapaderisco-unilab
  template:
    metadata:
      labels:
        app: mapaderisco-unilab
    spec:
      containers:
      - name: mapaderisco-unilab
        image: dti-registro.unilab.edu.br/unilab/mapaderiscounilab:main
        resources: {}
        imagePullPolicy: Always
        workingDir: /usr/share/nginx/html
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: tz-america
          mountPath: /etc/localtime
      volumes:
      - name: tz-america
        hostPath:
          path: /usr/share/zoneinfo/America/Fortaleza
          type: File
      imagePullSecrets:
      - name: harbor-regcred
