kubernetes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mapaderisco-unilab
  name: mapaderisco-unilab
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /
    prometheus.io/port: '8080'
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mapaderisco-unilab
